add fastapi app

--- a/notebook/trials.ipynb
+++ b/notebook/trials.ipynb
@@ -7,6 +7,8 @@
    "outputs": [],
    "source": [
     "import os \n",
+    "import pickle\n",
+    "\n",
     "os.chdir('/Users/anuragkotiyal/Desktop/Projects/Heart Attack Prediction')\n",
     "\n",
     "from pathlib import Path\n",
@@ -21,7 +23,7 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.svm import SVC\n",
     "\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import confusion_matrix, classification_report \n",
     "\n",
@@ -35,14 +37,6 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2024-05-04 22:24:42,210 - INFO - Loading data.]\n",
-      "[2024-05-04 22:24:42,214 - INFO - Loading data successful.]\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -192,10 +186,8 @@
     }
    ],
    "source": [
-    "logger.info(\"Loading data.\")\n",
     "data_path = os.path.join(os.getcwd(), \"data/heart.csv\")\n",
     "data = pd.read_csv(data_path)\n",
-    "logger.info(\"Loading data successful.\")\n",
     "data.head()"
    ]
   },
@@ -465,22 +457,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2024-05-04 22:24:44,510 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
-      "[2024-05-04 22:24:44,514 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
-      "[2024-05-04 22:24:44,536 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
-      "[2024-05-04 22:24:44,542 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
-      "[2024-05-04 22:24:44,571 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
-      "[2024-05-04 22:24:44,576 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
-      "[2024-05-04 22:24:44,599 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
-      "[2024-05-04 22:24:44,603 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
-      "[2024-05-04 22:24:44,628 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
-      "[2024-05-04 22:24:44,632 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
-      "[2024-05-04 22:24:44,655 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
-      "[2024-05-04 22:24:44,659 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
-      "[2024-05-04 22:24:44,683 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
-      "[2024-05-04 22:24:44,687 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
-      "[2024-05-04 22:24:44,717 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
-      "[2024-05-04 22:24:44,720 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n"
+      "[2024-05-06 21:58:26,738 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
+      "[2024-05-06 21:58:26,744 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
+      "[2024-05-06 21:58:26,767 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
+      "[2024-05-06 21:58:26,771 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
+      "[2024-05-06 21:58:26,798 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
+      "[2024-05-06 21:58:26,802 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
+      "[2024-05-06 21:58:26,825 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
+      "[2024-05-06 21:58:26,829 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
+      "[2024-05-06 21:58:26,852 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
+      "[2024-05-06 21:58:26,856 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
+      "[2024-05-06 21:58:26,880 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
+      "[2024-05-06 21:58:26,884 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
+      "[2024-05-06 21:58:26,907 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
+      "[2024-05-06 21:58:26,911 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
+      "[2024-05-06 21:58:26,939 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n",
+      "[2024-05-06 21:58:26,943 - INFO - Using categorical units to plot a list of strings that are all parsable as floats or dates. If these strings should be plotted as numbers, cast to the appropriate data type before plotting.]\n"
      ]
     },
     {
@@ -837,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1074,10 +1066,10 @@
     "knn.fit(X_train_, y_train)\n",
     "save_model(knn, \"knn.pkl\")\n",
     "\n",
-    "y_pred_knn_best = knn.predict(X_test_)\n",
+    "knn_pred = knn.predict(X_test_)\n",
     "\n",
-    "print(confusion_matrix(y_test, y_pred_knn_best))\n",
-    "print(classification_report(y_test, y_pred_knn_best))"
+    "print(confusion_matrix(y_test, knn_pred))\n",
+    "print(classification_report(y_test, knn_pred))"
    ]
   },
   {
